[gd_scene load_steps=7 format=3 uid="uid://bp6sdg8br2uvi"]

[ext_resource type="Script" uid="uid://d1kekcny7q06l" path="res://common/components/health_bar/health_bar_component.gd" id="1_e64je"]
[ext_resource type="Texture2D" uid="uid://dpii0b1i34mmt" path="res://common/components/health_bar/art/health_bar.png" id="2_4x7tt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5xp6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ghej"]
bg_color = Color(0.379439, 0.67601, 0.480625, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1qjdv"]
texture = ExtResource("2_4x7tt")
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw4qc"]
bg_color = Color(0.881937, 0.881937, 0.881937, 1)

[node name="HealthBarComponent" type="Node2D"]
script = ExtResource("1_e64je")

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 2
custom_minimum_size = Vector2(16, 2.5)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.25
offset_right = 8.0
offset_bottom = 1.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_i5xp6")
theme_override_styles/fill = SubResource("StyleBoxFlat_1ghej")
value = 50.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_1qjdv")
theme_override_styles/fill = SubResource("StyleBoxFlat_uw4qc")
value = 70.0
show_percentage = false

[node name="Timer" type="Timer" parent="HealthBar"]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="HealthBar/Timer" to="." method="_on_timer_timeout"]
